# Modulo_3_15_ejercicio

./: Biblioteca.py  Calculadora_impuesto.py  Contador_llamada.py  Contador_llamada_3.py  Datos_csv.py  Datos_map_y_lambda_6.py  Explorar_datos_10.py  Filtrado_estudiantes_filter_7.py  Gestor_tarea_archivo_txt.py  Imc_1.py  Inventario_json.py  Perfil_usuario.py  Perfil_usuario_2.py  README.md  Reportes_arcivos.py  Sumatoria_reduce_9.py  Transformar_8.py  Validar_datos_genericos.py  pyproject.toml  test_inventario_json.py
test/: test_biblioteca.py  test_contador_llamada.py  test_datos_csv.py  test_explorador.py  test_filtro_estu.py  test_gestor_tarea.py  test_gestor_txt.py  test_imic.py  test_inventario_json.py  test_map_lamb.py  test_sumatoria.py  test_transformar.py  test_validar_datos.py  tets_calcular_impustos.py  tets_usuario.py
